# ha-openwrt

./: .gitignore  AGENTS.MD  README.md  hacs.json  mkdocs.yml  pyproject.toml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/scripts/: calculate_release_details.py  changelog_builder.py  release_helper.py  update_templates.py  version_manager.py
.github/workflows/: ci-orchestrator.yml  deploy_docs.yml  issue-orchestrator.yml  labeler.yml  release.yml
custom_components/openwrt/: __init__.py  binary_sensor.py  button.py  config_flow.py  (+12 more)
docs/: automations.md  configuration.md  development.md  device-tracking.md  firmware-updates.md  index.md  installation.md  services.md  support.md  troubleshooting.md
scripts/: generate_changelog.py  test_api_connection.py
tests/: conftest.py  test_adblock_management.py  test_adblock_status_and_service.py  test_api_luci_rpc.py  test_api_read_file.py  test_api_ssh.py  test_api_ubus.py  test_api_wireguard.py  test_backoff.py  test_backup_download.py  test_banip.py  test_batman.py  test_config_flow.py  test_conntrack.py  test_coordinator.py  test_cpu_load_calculation.py  test_device_tracker.py  test_dhcp_services.py  test_firmware_update.py  test_gps_location.py  test_logs_extended.py  test_migration.py  test_mqtt_presence.py  test_nlbwmon.py  test_nlbwmon_rx_tx.py  test_number.py  test_package_updates.py  test_router_mac_tracking.py  test_selective_tracking.py  test_sensor.py  test_session_leaks.py  test_snort.py  test_translations.py  test_wireless_device_grouping.py  test_wol_device.py
(+32 files in other folders)
