[project]
name = "ha-openwrt"
version = "2.3.0b0"
description = "Home Assistant integration for OpenWrt devices."
authors = [
    {name = "FaserF", email = "github@fabiseitz.de"}
]
readme = "README.md"
requires-python = "==3.14.6"

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
    "F403",  # star imports used
    "F405",  # undefined names from star imports
]

[tool.mypy]
python_version = "3.14"
show_error_codes = true
follow_imports = "silent"
ignore_missing_imports = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
disallow_untyped_defs = true
disable_error_code = ["misc", "call-arg", "import-untyped"]


[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
    "testing_config",
]
asyncio_mode = "auto"
